[gd_scene load_steps=7 format=3 uid="uid://beqg8k0qbsbqm"]

[ext_resource type="PackedScene" uid="uid://wyxtpqp3tbwv" path="res://scenes/MainBoard.tscn" id="1_g2gpa"]
[ext_resource type="Script" path="res://src/MainPlayerScene.gd" id="1_vp321"]
[ext_resource type="PackedScene" uid="uid://bnv4k314q8820" path="res://scenes/ScoreBoard.tscn" id="3_31luk"]
[ext_resource type="PackedScene" uid="uid://bs4h1hwwtu147" path="res://scenes/ScoreBoxes.tscn" id="4_8j7cr"]
[ext_resource type="Texture2D" uid="uid://dlkes8pirsu0h" path="res://images/nickname.jpg" id="5_omrhd"]
[ext_resource type="Texture2D" uid="uid://cwjdma5ep6ipl" path="res://images/circle-left-solid.svg" id="6_38sp1"]

[node name="MainPlayerScene" type="Node2D"]
position = Vector2(-32, 0)
script = ExtResource("1_vp321")

[node name="MainBoardRoot" parent="." instance=ExtResource("1_g2gpa")]
position = Vector2(-240, -2)

[node name="ScoreBoardRoot" parent="." instance=ExtResource("3_31luk")]
position = Vector2(546, 67)

[node name="ScoreBoxes" parent="." instance=ExtResource("4_8j7cr")]
position = Vector2(868, 588)
scale = Vector2(0.55, 0.55)

[node name="PlayerInfo" type="NinePatchRect" parent="."]
offset_left = 873.0
offset_top = 11.0
offset_right = 1161.0
offset_bottom = 166.0
texture = ExtResource("5_omrhd")

[node name="lblNickName" type="RichTextLabel" parent="PlayerInfo"]
layout_mode = 0
offset_left = 42.0
offset_top = 123.0
offset_right = 276.0
offset_bottom = 145.0
theme_override_font_sizes/normal_font_size = 29
bbcode_enabled = true
fit_content = true

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
offset_left = 38.0
offset_top = 28.0
offset_right = 100.0
offset_bottom = 92.0
texture_normal = ExtResource("6_38sp1")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
